<package>

  <name>h9_msgs</name>
  <version>1.0.0</version>
  <description>
    ROS message definitions for Leishen asr408.
  </description>
  <url>http://www.ros.org/wiki/h9_msgs</url>
  <maintainer email="yutongyan@lslidar.com">Yutong</maintainer>
  <author>Yutong</author>
  <license>GNU General Public License V3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
